profilelist1exp/unpackaged/objects/Outlook_Forecast_Line_Item__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>CSMR__c</fullName>
        <label>CSMR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>TEXT( Outlook_Forecast__r.Fiscal_Quarter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal_Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE__c</fullName>
        <label>LE</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LineItem_Unique_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>LineItem_Unique_Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLFC_Category__c</fullName>
        <formula>TEXT( Outlook_Forecast__r.Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLFC_Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Forecast__c</fullName>
        <label>Outlook Forecast</label>
        <referenceTo>Outlook_Forecast__c</referenceTo>
        <relationshipLabel>Outlook Forecast Line Item</relationshipLabel>
        <relationshipName>Outlook_Forecast_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PUB__c</fullName>
        <label>PUB</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Outlook_Forecast__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMB__c</fullName>
        <label>SMB</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Outlook Forecast Line Item</relationshipLabel>
        <relationshipName>Outlook_Forecast_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outlook Forecast Line Item</label>
    <nameField>
        <displayFormat>OFLI-{000000}</displayFormat>
        <label>Outlook Forecast Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlook Forecast Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>